# silentkisses

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 20250221183410_users.sql
res/: style.css
res/pages/: hello.md  index.html  index_login.html  index_logout.html  login.html  message.html  new_room.html  private_room.html  room.html  room_item.html  sorry.html
res/pages/auth/: login.html
res/pages/profiles/: new.html  profile.html
res/pages/rooms/: new.html  room.html
src/: appresult.rs  auth.rs  db.rs  index.rs  lib.rs  main.rs  profiles.rs  res.rs  rooms.rs  session.rs
src/auth/: clients.rs  lockin.rs  login.rs  logout.rs  mod.rs
src/pages/: index.html  index_login.html  index_logout.html
src/profiles/: mod.rs  page.rs
src/rooms/: mod.rs  msg.rs  new.rs  room.rs  ws.rs
