[package]
name = "silentkisses"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = [ "macros" ] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.218", features = ["derive"] }
json = "0.12.4"
tower-http = { version = "0.6.2", features = ["cors"] }
oauth2 = "5.0.0"
anyhow = "1.0.96"
serde_json = "1.0.139"
uuid = { version = "1.14.0", features = ["v4"] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
tower-sessions = "0.14.0"
time = "0.3.37"
# serde_json = "1.0.48"
