[package]
name = "silentkisses"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["macros", "ws"] }
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["cors"] }
oauth2 = "5.0.0"
anyhow = { version = "1.0.97", features = ["backtrace"] }
serde_json = "1.0.140"
uuid = { version = "1.15.1", features = ["v7","serde"] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
tower-sessions = "0.14.0"
time = "0.3.39"
dotenv = "0.15.0"
rand = "0.9.0"
reqwest = { version = "0.12.14", features = ["json"] }
pulldown-cmark = "0.13.0"
futures-util = "0.3.31"
